# aimatching

./: .flaskenv  .gitignore  README.md  __init_db.py  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
api/: __init__.py
api/controllers/: __init__.py  auth_controller.py  job_controller.py  match_controller.py  profile_controller.py  resume_controller.py
api/middlewares/: __init__.py  auth.py  error_handler.py  rate_limit.py
api/routes/: __init__.py  auth.py  jobs.py  matches.py  profiles.py  resumes.py
api/schemas/: __init__.py  auth.py  jobs.py  matches.py  profiles.py  resumes.py
app/: __init__.py  config.py  extensions.py  wsgi.py
config/: __init__.py  base.py  development.py  production.py  testing.py
database/: __init__.py  session.py
database/migrations/: __init__.py  alembic.ini
database/repositories/: __init__.py  base_repository.py  job_repository.py  match_repository.py  profile_repository.py  resume_repository.py  user_repository.py
models/: __init__.py  base.py  job.py  match.py  profile.py  resume.py  user.py
services/: __init__.py
services/ai/: __init__.py  claude_service.py  prompts.py  response_parser.py
services/auth/: __init__.py  auth_service.py  token_service.py
services/matching/: __init__.py  job_analyzer.py  match_service.py  (+2 more)
tasks/: __init__.py  celery_app.py  matching_tasks.py  notification_tasks.py  scraping_tasks.py
tests/: __init__.py
utils/: __init__.py  decorators.py  helpers.py  security.py  text_extractors.py  validators.py
(+116 files in other folders)
